Fixed rock button size, add gap between buttons

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ p {
     font-size: 20px;
 }
 
+#buttons {
+    display: flex;
+    gap: 16px;
+}
+
 #buttons button {
     background-color:rgb(34, 34, 34);
 }
